--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "line-qr-code",
+  "name": "copy-2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
