--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "line-friend-adder",
+  "name": "line-id-to-google-sheet",
   "private": true,
   "version": "0.0.0",
   "type": "module",
