--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "line-id-to-google-sheet",
+  "name": "line-qr-code",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
